Fix Bug 309760 - Crash while inline-renaming a file and apply change with return-key

BUG: 309760
FIXED-IN: 4.9.4